AWS-EKS-DevOps-Automation/Kubernetes Files/kubernetes/prod-main/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-main-ingress
